# signate-fish

./: .dockerignore  .gitignore  Dockerfile  README.md  create_resize_mix.py  docker-compose.yml  eda_meta.py  eda_test.py  eda_train.py  evaluate.py  mypy.ini  pyproject.toml  upload_test_images.py  upload_train_images.py  vis_test.py  vis_train.py  visualize.py
app/: .eslintrc.js  package.json
fish/: __init__.py  config.py  data.py  ensamble.py  evaluate.py  metrics.py  models.py  predict.py  store.py  train.py
fish/centernet/: config.py  predict.py  pseudo_label.py  train.py
fish/effdet/: config.py  evaluate.py  predict.py  pseudo_label.py  train.py
fish/frame/: config.py  predict.py  train.py
fish/wfilter/: config.py  predict.py  train.py
tests/: test_data.py  test_metrics.py  test_models.py  test_store.py
